--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This App is a Simple Todo App with tests
 
-Things you may want to cover:
+Todo List:
+    Create
+    Edit
+    Update
+    Destroy  { SPECS and Functionality}
 
-* Ruby version
+    Todo Items:
+        Create
+        Edit
+        Update
+        Destroy {Specs and Functionality}
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
